@@ -57,6 +57,7 @@ Bugs:
 * #1107 - Fix Address#display_name and other formatting flip-flopping between encoded and decoded forms depending on whether #encoded or #decoded was called last. (jeremy)
 * #1110 - Fix that Mail::Multibyte::Chars#initialize mutated its argument by calling force_encoding on it. (jeremy)
 * #1113 - Eliminate attachment corruption caused by CRLF conversion. (jeremy)
+* #1131 - Fix that Message#without_attachments! didn't parse the remaining parts. (jeremy)
 
 == Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>
 
